--- a/src/App.scss
+++ b/src/App.scss
@@ -1,12 +1,12 @@
-nav {
-    padding: 5px;
-    background-color: paleturquoise;
+// nav {
+//     padding: 5px;
+//     background-color: paleturquoise;
 
-    ul {
-        width: 600px;
-        margin: 0 auto;
-        display: flex;
-        flex-direction: row;
-        justify-content: space-around;
-    }
-}
+//     ul {
+//         width: 600px;
+//         margin: 0 auto;
+//         display: flex;
+//         flex-direction: row;
+//         justify-content: space-around;
+//     }
+// }
