--- a/src/App.scss
+++ b/src/App.scss
@@ -6,25 +6,25 @@
     color: black;
 }
 
-.spinner {
-    border: 4px-solid rgba(0, 0, 0, .1);
-    border-left-color: #E3BCB5;
-    border-radius: 50%;
-    width: 36px;
-    height: 36px;
+// .spinner {
+//     border: 4px-solid rgba(0, 0, 0, .1);
+//     border-left-color: #E3BCB5;
+//     border-radius: 50%;
+//     width: 36px;
+//     height: 36px;
 
-    animation: spin 1s linear infinite;
-}
+//     animation: spin 1s linear infinite;
+// }
 
-@keyframes spin {
-    0% {
-        transform: rotate(0deg);
-    }
+// @keyframes spin {
+//     0% {
+//         transform: rotate(0deg);
+//     }
     
-    100% {
-        transform: rotate(360deg);
-    }
-}
+//     100% {
+//         transform: rotate(360deg);
+//     }
+// }
 
 .div-header {
 
@@ -61,8 +61,7 @@
         .div-item {
 
             img {
-                width: 200px;
-                border-radius: 5%;
+                border-radius: 50%;
             }
         }
     }
