--- a/src/App.scss
+++ b/src/App.scss
@@ -61,6 +61,7 @@
         .div-item {
 
             img {
+                width: 150px;
                 border-radius: 50%;
             }
         }
