--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,20 @@
+body {
+    background: linear-gradient(-45deg, #dce0b8, #e2abab);
+    background-size: 400% 400%;
+    animation: change 5s ease-out infinite;
+}
+@keyframes change {
+    0% {
+        background-position: 0 50%;
+    }
+    50% {
+        background-position: 100% 50%;
+    }
+    100% {
+        background-position: 0 50%;
+    }
+}
+
 .link-active {
     color: brown;
 }
@@ -52,12 +69,13 @@
 
     h2 {
         text-align: center;
+        font-size: 48px;
     }
 
     .div-itemList {
         display: grid;
-        grid-template-rows: 1fr 1fr; 
-        grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+        grid-template-columns: auto auto auto auto auto;
+        justify-content: space-between;
         row-gap: 30px;
         
 
@@ -65,7 +83,7 @@
             width: 200px;
             height: 275px;
             padding: 10px;
-            border: 1px solid grey;
+            border: 1px solid transparent;
             text-align: center;
 
             img {
@@ -96,18 +114,156 @@
                         font-size: medium;
                         background-color: transparent;
                         cursor: pointer;
-                    }
 
-                    button:hover {
-                        background-color: ghostwhite;
-                        border: 1px solid grey;
-                        border-radius: 50%;
+                        svg {
+                            color: black;
+                        }
+                        svg:hover {
+                            color: brown;
+                        }
                     }
                 }
     
             }
 
+        }
 
+        .div-item:hover {
+            border-radius: 20px;
+            box-shadow: 15px 15px 40px rgba(61, 61, 61, 0.1);
+            background: rgba(255, 255, 255, 0.1);
+            border-top: 1px solid rgba(255, 255, 255, 0.5);
+            border-left: 1px solid rgba(255, 255, 255, 0.5);
+        }
+    }
+}
+
+.div-itemDetail {
+    width: 1200px;
+    margin: 50px auto 0 auto;
+    border-radius: 20px;
+    box-shadow: 15px 15px 40px rgba(61, 61, 61, 0.1);
+    background: rgba(255, 255, 255, 0.1);
+    border-top: 1px solid rgba(255, 255, 255, 0.5);
+    border-left: 1px solid rgba(255, 255, 255, 0.5);
+    padding: 15px 0 15px 0;
+    // background-color: aquamarine;
+    display: grid;
+    grid-template-columns: 40% 30% 30%;
+    grid-template-rows: 30% 30% 40%;
+    
+
+    img {
+        grid-row: 1/6;
+        width: 400px;
+        place-self: center;
+        // background-color: plum;
+    }
+    h3 {
+        grid-column: 2/4;
+        // background-color: plum;
+        font-size: 46px;
+        
+        
+    }
+    .p-desc {
+        grid-column: 2/4;
+        // background-color: plum;
+        font-size: 20px;
+        margin: 0;
+    }
+    h4 {
+        // background-color: plum;
+        font-size: 20px;
+        place-self: center;
+    }
+    div {
+        // background-color: plum;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    a{
+        place-self: center;
+        color: black;
+        padding: 5px 5px 0 5px;
+        border-radius: 10px;
+        border-top: 1px solid rgba(255, 255, 255, 0.5);
+        border-left: 1px solid rgba(255, 255, 255, 0.5);
+        box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
+    }
+}
+
+.div-cart {
+    width: 1200px;
+    margin: 50px auto 0 auto;
+
+
+    h2 {
+        text-align: center;
+    }
+
+    h4 {
+        text-align: center;
+    }
+
+
+
+    .cart-list {
+        border-radius: 20px;
+        box-shadow: 15px 15px 40px rgba(61, 61, 61, 0.1);
+        background: rgba(255, 255, 255, 0.1);
+        border-top: 1px solid rgba(255, 255, 255, 0.5);
+        border-left: 1px solid rgba(255, 255, 255, 0.5);
+        margin: 10px 40px;
+
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+
+        h3 {
+            margin: 0;
+            width: 300px;
+        }
+        p {
+            margin: 0;
+        }
+        button {
+            margin: 0;
+            svg:hover {
+                color: brown;
+            }
+        }
+    }
+
+    .final-moves {
+        width: 300px;
+        margin: 0 auto;
+
+
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+
+        button {
+            background-color: transparent;
+            cursor: pointer;
+            padding: 10px;
+            border-radius: 10px;
+            border: 1px solid transparent;
+        }
+        button:hover {
+            border-top: 1px solid white;
+            border-left: 1px solid white;
+        }
+
+        p {
+            margin: 0;
+            font-size: 16px;
+        }
+
+        svg {
+            color: black;
         }
     }
 }
