--- a/src/App.scss
+++ b/src/App.scss
@@ -117,6 +117,7 @@ body {
 
                         svg {
                             color: black;
+                            text-align: center;
                         }
                         svg:hover {
                             color: brown;
@@ -157,6 +158,8 @@ body {
         grid-row: 1/6;
         width: 400px;
         place-self: center;
+        border-radius: 50%;
+        box-shadow: 0 5px 10px grey;
         // background-color: plum;
     }
     h3 {
@@ -221,9 +224,19 @@ body {
         justify-content: space-evenly;
         align-items: center;
 
-        h3 {
+        div {
             margin: 0;
-            width: 300px;
+            width: 400px;
+            display: flex;
+
+            img {
+                height: 4rem;
+                border-radius: 50%;
+                box-shadow: 0 2px 5px grey;
+            }
+            h3 {
+                margin-left: 1rem;
+            }
         }
         p {
             margin: 0;
@@ -264,6 +277,80 @@ body {
 
         svg {
             color: black;
+        }
+    }
+}
+
+.item-count {
+    width: 200px;
+    margin: 0 auto;
+
+
+    div {
+        margin: 0 20px;
+
+        button {
+            background-color: transparent;
+            cursor: pointer;
+            border: none;
+        }
+
+        span {
+            margin: 0 5px;
+            font-size: 18px;
+            font-weight: bold;
+        }
+
+    svg:hover {
+        color: brown;
+    }
+    }
+
+}
+
+.div-checkout {
+    width: 1200px;
+    margin: 50px auto 0 auto;
+
+    h2{
+        text-align: center;
+        font-size: 34px;
+    }
+
+    form {
+        border-radius: 20px;
+        box-shadow: 15px 15px 40px rgba(61, 61, 61, 0.1);
+        background: rgba(255, 255, 255, 0.1);
+        border-top: 1px solid rgba(255, 255, 255, 0.5);
+        border-left: 1px solid rgba(255, 255, 255, 0.5);
+        padding: 15px;
+        display: flex;
+        justify-content: space-around;
+
+        input {
+            border-radius: 5px;
+            border-top: 1px solid grey;
+            border-right: 1px solid white;
+            border-bottom: 1px solid white;
+            border-left: 1px solid grey;
+            background-color: transparent;
+            outline: none;
+
+            font-size: 1em;
+        }
+
+        button {
+            background-color: transparent;
+            cursor: pointer;
+            border-radius: 5px;
+            border-top: 1px solid white;
+            border-right: 1px solid grey;
+            border-bottom: 1px solid grey;
+            border-left: 1px solid white;
+
+            p{
+                margin: 0;
+            }
         }
     }
 }
